<resources>
    <string name="app_name">MovieTip</string>

    <string name="movies_now_playing_path">"now_playing"</string>

    <!-- Bottom navigation view -->
    <string name="title_popular">Popular</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="title_favorites">Favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="internet_status">"No internet connection!"</string>
    <string name="detail_movie_name">Movie Name</string>
    <string name="detail_movie_date">10/15/2018</string>
    <string name="detail_movie_release_date">Release Date</string>
    <string name="detail_movie_overview_text">Overview Text</string>
    <string name="detail_movie_votes">Votes</string>
    <string name="detail_movie_popularity_rank">5</string>
    <string name="detail_movie_vote_count">12345</string>
    <string name="detail_movie_popularity_rank_label">Rank Today #</string>
    <string name="detail_movie_popularity_rank_textView">5</string>
    <string name="detail_movie_backdrop_image">movie backdrop image</string>
    <string name="detail_movie_poster">movie poster</string>
    <string name="action_settings">Settings</string>

</resources>
