<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

<android.support.constraint.ConstraintLayout
    android:id="@+id/scrolling_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Reference: https://developer.android.com/reference/android/support/constraint/ConstraintLayout#DimensionConstraints -->
    <android.support.v7.widget.CardView
        android:id="@+id/detail_movie_info_cardview"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.90"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/detail_movie_info_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <RatingBar
                android:id="@+id/movie_detail_vote_average"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:max="10"
                android:numStars="10"
                android:stepSize="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_movie_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/detail_movie_date"
                app:layout_constraintStart_toEndOf="@+id/detail_movie_release_date_label"
                app:layout_constraintTop_toBottomOf="@+id/movie_detail_vote_average" />

            <TextView
                android:id="@+id/detail_movie_release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/detail_movie_release_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_detail_vote_average" />

            <TextView
                android:id="@+id/detail_movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/detail_movie_overview_text"
                android:typeface="monospace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_movie_release_date_label" />

            <TextView
                android:id="@+id/detail_movie_vote_count_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/detail_movie_votes"
                app:layout_constraintStart_toEndOf="@+id/movie_detail_vote_average"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_movie_vote_count_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/detail_movie_vote_count"
                app:layout_constraintStart_toEndOf="@+id/detail_movie_vote_count_label"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/detail_movie_favorites_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite_black_24dp" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/detail_movie_trailers_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/detail_movie_info_cardview"
        app:layout_constraintStart_toStartOf="parent"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/detail_movie_reviews_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/detail_movie_trailers_recyclerview"
        app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>

</merge>
